Fixed exceeding layout issue of collector's note

--- a/src/amo/components/EditableCollectionAddon/styles.scss
+++ b/src/amo/components/EditableCollectionAddon/styles.scss
@@ -88,7 +88,8 @@ div.EditableCollectionAddon-notes {
   grid-column: 1 / 3;
   margin-top: $padding-page;
   padding: 12px;
-
+  word-break: break-all;
+  
   @include respond-to(large) {
     margin-top: 0;
 
